--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.8",
     "browser-image-compression": "^2.0.2",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "multer": "^2.0.2",
     "react": "^18.2.0",
