--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.8",
     "browser-image-compression": "^2.0.2",
+    "file-saver": "^2.0.5",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
