--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "preview": "serve -s build -l 35813"
+},
   "browserslist": {
     "production": [
       ">0.2%",
