--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.8",
     "browser-image-compression": "^2.0.2",
+    "chart.js": "^4.5.1",
     "file-saver": "^2.0.5",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "multer": "^2.0.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.8.2",
@@ -19,11 +21,11 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "preview": "serve -s build -l 35813"
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "preview": "serve -s build -l 35813"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
